# cktt-ai-agent-platform

./: .env.example  .gitignore  Makefile  README.md  USAGE.md  docker-compose.yml  pyproject.toml  ruff.toml
apps/agent-api/: pyproject.toml
apps/agent-api/src/agent_api/: __init__.py  main.py
apps/agent-api/src/agent_api/api/v1/: __init__.py  agents.py  crews.py  tasks.py
apps/agent-brain/: pyproject.toml
apps/agent-brain/src/agent_brain/: __init__.py
apps/agent-brain/src/agent_brain/coordinator/: __init__.py  agent_coordinator.py
apps/agent-brain/src/agent_brain/orchestrator/: __init__.py  base.py  crew_orchestrator.py
apps/agent-brain/src/agent_brain/router/: __init__.py  base.py  llm_router.py  task_router.py
apps/agent-brain/src/agent_brain/scheduler/: __init__.py  base.py  task_scheduler.py
apps/agent-core/: pyproject.toml
apps/agent-core/src/agent_core/: __init__.py
apps/agent-core/src/agent_core/agents/: __init__.py  base.py  conversational.py  it_project_manager.py  llm_agent.py  project_rd.py  react.py
apps/agent-core/src/agent_core/agents/roles/: __init__.py  default_tools.py  project_manager.py
apps/agent-core/src/agent_core/chains/: __init__.py  base.py  planning.py
apps/agent-core/src/agent_core/memory/: __init__.py  buffer.py
apps/agent-core/src/agent_core/planning/: __init__.py
apps/agent-core/src/agent_core/tools/: __init__.py  base.py  registry.py
apps/agent-worker/: pyproject.toml
apps/agent-worker/src/agent_worker/: __init__.py  worker.py
config/: base.yaml  development.yaml  production.yaml  staging.yaml
docs/: index.md  mkdocs.yml
docs/architecture/: overview.md  system-design.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
infrastructure/docker/: .dockerignore  nginx.conf
infrastructure/docker/app/: Dockerfile.api  Dockerfile.worker
infrastructure/docker/base/: requirements.txt
requirements/: base.txt  dev.txt  test.txt
scripts/database/: README.md  schema.sql
scripts/deploy/: deploy.sh  health_check.sh
scripts/dev/: lint.sh  setup_dev.sh
services/llm/: __init__.py  base.py
services/llm/anthropic/: __init__.py
services/llm/local/: __init__.py
services/llm/openai/: __init__.py
services/storage/: __init__.py
services/storage/document/: __init__.py  s3_storage.py
services/storage/memory/: __init__.py  postgres_memory.py  redis_memory.py
services/storage/vector/: __init__.py  base.py  milvus.py  qdrant.py  weaviate.py
skills/: pyproject.toml
skills/implementations/: __init__.py  code_executor.py  data_analysis.py  document_processor.py  web_search.py
skills/src/skills/: __init__.py  base.py  loader.py  registry.py
tests/: conftest.py
