[tool.poetry]
name = "cktt-ai-agent-platform"
version = "0.1.0"
description = "Enterprise AI Agent Platform"
authors = ["CKTT Team <team@cktt.ai>"]
readme = "README.md"
packages = [{include = "common"}, {include = "types"}, {include = "config"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.0"
celery = "^5.3.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
black = "^23.12.0"
mypy = "^1.8.0"

[tool.poetry.workspace]
packages = [
    "apps/agent-core",
    "apps/agent-brain",
    "apps/agent-api",
    "apps/agent-worker",
    "packages/common",
    "packages/types",
    "packages/config",
    "skills",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
