[tool.poetry]
name = "skills"
version = "0.1.0"
description = "Skill system for AI agents"
authors = ["CKTT Team <team@cktt.ai>"]
packages = [{include = "skills"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
