[tool.poetry]
name = "agent-api"
version = "0.1.0"
description = "AI Agent API Service"
authors = ["CKTT Team <team@cktt.ai>"]
packages = [{include = "agent_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
